welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:30: error: not found: value ecrireMessage
    ecrireMessage(avancement)
    ^